--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_card">Card</string>
+    <string name="title_card_fragment">List card</string>
+    <string name="pokemonName">Entre le nom d\'un pokemon</string>
+    <string name="pokemonNameInfos">Cette opération peut prendre un certain temps</string>
+    <string name="pokemonButtonName">Voir la carte demandée</string>
 </resources>
