--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,11 @@
     <string name="title_card_info">Information de la carte</string>
     <string name="title_card">Recherche</string>
     <string name="title_card_fragment">List card</string>
-    <string name="title_favoris">Favoris</string>
+    <string name="title_favoris">Collection</string>
     <string name="pokemonName">Entre le nom d\'un pokemon</string>
     <string name="pokemonNameInfos">Cette opération peut prendre un certain temps</string>
     <string name="pokemonButtonName">Voir la carte demandée</string>
-    <string name="updateFavoris">Actualiser les favoris</string>
+    <string name="updateFavoris">Actualiser la collection</string>
     <string name="playername">PlayerName</string>
     <string name="xxx">XXX</string>
     <string name="base">Base</string>
