folder image + fix images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PokemonCardPrice</string>
+    <string name="app_name">TCG Poképrix</string>
     <string name="title_home">Accueil</string>
     <string name="title_dashboard">Graphique</string>
     <string name="title_card_info_bottom">Infos</string>
@@ -8,7 +8,7 @@
     <string name="title_card_fragment">List card</string>
     <string name="title_favoris">Collection</string>
     <string name="title_parameter">Paramètres</string>
-    <string name="pokemonName">Entre le nom d\'un pokemon</string>
+    <string name="pokemonName">Entre le nom d\'une carte</string>
     <string name="pokemonNameInfos">Cette opération peut prendre un certain temps</string>
     <string name="pokemonButtonName">Voir la carte demandée</string>
     <string name="updateFavoris">Actualiser la collection</string>
@@ -24,7 +24,7 @@
     <string name="tcgmarket_bas">tcgMarket bas</string>
     <string name="tcgmarket_milieu">tcgMarket milieu</string>
     <string name="tcgmarket_haut">tcgMarket haut</string>
-    <string name="image_d_une_carte_pokemon">Image d\'une carte pokemon</string>
+    <string name="image_d_une_carte_pokemon">Image d\'une carte</string>
     <string name="add">+</string>
     <string name="carte_moyenne_du_dernier_jour">Carte moyenne du dernier jour</string>
     <string name="favorisbutton">Voir ses infos</string>
