--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="add">+</string>
     <string name="carte_moyenne_du_dernier_jour">Carte moyenne du dernier jour</string>
     <string name="favorisbutton">Voir ses infos</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
